# Maguic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmakecompile.sh  compileAll.sh
examples/: simpleWindow.cc
src/: components.cc  maguic.cc  maguic.hh  main.cpp
